Upgrade React for use()

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "4.11.0",
   "description": "A modern Web UI for various torrent clients with multi-user and multi-client support",
   "keywords": [
-    "typescript",
+    "typscript",
     "react",
     "node",
     "webui",
@@ -116,8 +116,8 @@
     "@types/parse-torrent": "^5.8.7",
     "@types/passport": "^1.0.17",
     "@types/passport-jwt": "^3.0.13",
-    "@types/react": "^18.3.24",
-    "@types/react-dom": "^18.3.7",
+    "@types/react": "^19.2.0",
+    "@types/react-dom": "^19.2.0",
     "@types/react-measure": "^2.0.12",
     "@types/react-transition-group": "^4.4.12",
     "@types/react-window": "^1.8.8",
@@ -187,8 +187,8 @@
     "postcss-loader": "^7.3.4",
     "prettier": "^2.8.8",
     "raw-loader": "^4.0.2",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "react-dropzone": "^14.3.8",
     "react-markdown": "^9.1.0",
     "react-measure": "^2.5.2",
